fix(mdc-fab): center icons on mobile safari

--- a/packages/mdc-fab/mdc-fab.scss
+++ b/packages/mdc-fab/mdc-fab.scss
@@ -119,4 +119,8 @@
   }
 }
 
+.mdc-fab__icon {
+  width: 100%;
+}
+
 /* postcss-bem-linter: end */
